added cpack configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.21)
-project(parquetpad LANGUAGES CXX)
+project(parquetpad VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -56,44 +56,110 @@ target_link_libraries(parquetpad PRIVATE
 )
 
 # --- Installation ---
-# This ensures the application and its dependencies are installed into a single directory.
-set(INSTALL_DIR "${CMAKE_BINARY_DIR}/install")
-message(STATUS "Install directory: ${INSTALL_DIR}")
+# This section sets up the installation rules for the project.
+# CPack will use these rules to create packages.
+
+# The executable and its dependencies will be installed in the same directory.
+set(INSTALL_BIN_DIR ".")
 
 install(TARGETS parquetpad
-    RUNTIME DESTINATION "${INSTALL_DIR}/bin"
-    LIBRARY DESTINATION "${INSTALL_DIR}/lib"
-    ARCHIVE DESTINATION "${INSTALL_DIR}/lib/static"
+    RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
+    BUNDLE DESTINATION "." COMPONENT Applications
 )
 
-# This is the modern CMake way to bundle dependencies on all platforms.
-# It requires CMake 3.21+
+# Use modern CMake to handle runtime dependencies.
+# This will find and install all required DLLs/shared libraries.
 install(RUNTIME_DEPENDENCY_SET app_dependencies
     POST_EXCLUDE_REGEXES "^(api-ms-win-.*|lib[b-z].*\.so\.[0-9]+|libgcc_s\.so\.1|libstdc\+\+\.so\.6|libm\.so\.6|libc\.so\.6|libdl\.so\.2|libpthread\.so\.0|ld-linux-x86-64\.so\.2)$"
-    DIRECTORIES
-        "${Qt6_INSTALL_DIR}"
-    DESTINATION "${INSTALL_DIR}/bin"
+    DESTINATION "${INSTALL_BIN_DIR}"
+    COMPONENT Applications
 )
 
-# For Windows, we need to run windeployqt to get Qt plugins and QML files
+# Platform-specific deployment steps
 if(WIN32)
-    # A more robust way is to find windeployqt and run it.
+    # On Windows, use windeployqt to gather Qt plugins, translations, etc.
     find_program(WINDEPLOYQT_EXECUTABLE windeployqt PATHS "${Qt6_INSTALL_DIR}/bin" NO_DEFAULT_PATH)
     if(WINDEPLOYQT_EXECUTABLE)
         message(STATUS "Found windeployqt: ${WINDEPLOYQT_EXECUTABLE}")
-        install(CODE "execute_process(COMMAND \"${WINDEPLOYQT_EXECUTABLE}\" --dir \"${INSTALL_DIR}/bin\" --plugindir plugins)")
+        install(CODE "
+            message(STATUS \"Running windeployqt...\")
+            execute_process(
+                COMMAND \"${WINDEPLOYQT_EXECUTABLE}\" --dir \"${CMAKE_INSTALL_PREFIX}/${INSTALL_BIN_DIR}\" --plugindir plugins
+                RESULT_VARIABLE result
+            )
+            if(NOT result EQUAL 0)
+                message(FATAL_ERROR \"windeployqt failed with exit code ${result}\")
+            endif()
+        " COMPONENT Applications)
     else()
-        message(WARNING "windeployqt not found. The installation might be incomplete.")
+        message(WARNING "windeployqt not found. The Windows installation might be incomplete.")
     endif()
-endif()
 
-# For macOS, we can use macdeployqt
-if(APPLE)
+    # Install the icon for the NSIS installer
+    install(FILES "${CMAKE_SOURCE_DIR}/assets/icons/cat_windows_icon.ico"
+        DESTINATION "${INSTALL_BIN_DIR}"
+        RENAME "installer_icon.ico"
+        COMPONENT Applications
+    )
+
+elseif(APPLE)
+    # On macOS, macdeployqt is used to create a proper .app bundle.
     find_program(MACDEPLOYQT_EXECUTABLE macdeployqt PATHS "${Qt6_INSTALL_DIR}/bin" NO_DEFAULT_PATH)
     if(MACDEPLOYQT_EXECUTABLE)
         message(STATUS "Found macdeployqt: ${MACDEPLOYQT_EXECUTABLE}")
-        install(CODE "execute_process(COMMAND \"${MACDEPLOYQT_EXECUTABLE}\" \"${INSTALL_DIR}/bin/parquetpad.app\")")
+        install(CODE "
+            message(STATUS \"Running macdeployqt...\")
+            execute_process(
+                COMMAND \"${MACDEPLOYQT_EXECUTABLE}\" \"${CMAKE_INSTALL_PREFIX}/parquetpad.app\"
+                RESULT_VARIABLE result
+            )
+            if(NOT result EQUAL 0)
+                message(FATAL_ERROR \"macdeployqt failed with exit code ${result}\")
+            endif()
+        " COMPONENT Applications)
     else()
-        message(WARNING "macdeployqt not found. The installation might be incomplete.")
+        message(WARNING "macdeployqt not found. The macOS installation might be incomplete.")
     endif()
 endif()
+
+# Install assets
+install(DIRECTORY assets/icons DESTINATION "${INSTALL_BIN_DIR}")
+
+
+# --- CPack Configuration ---
+# This section configures CPack for creating installers and packages.
+
+set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A simple Parquet file viewer.")
+set(CPACK_PACKAGE_VENDOR "ParquetPad Contributors")
+set(CPACK_PACKAGE_CONTACT "noreply@example.com")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
+set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
+
+if(WIN32)
+    set(CPACK_GENERATOR "NSIS;ZIP")
+
+    # NSIS specific settings
+    set(CPACK_NSIS_PACKAGE_NAME "${CPACK_PACKAGE_NAME} ${CPACK_PACKAGE_VERSION}")
+    set(CPACK_NSIS_INSTALLER_ICON_CODE "installer_icon.ico")
+    set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/assets/icons/cat_windows_icon.ico")
+    set(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}/assets/icons/cat_windows_icon.ico")
+    set(CPACK_NSIS_CREATE_ICONS_EXTRA "CreateShortCut \\\"$DESKTOP\\\\${CPACK_PACKAGE_NAME}.lnk\\\" \\\"$INSTDIR\\\\${INSTALL_BIN_DIR}\\\\parquetpad.exe\\\"")
+    set(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_NAME}")
+    set(CPACK_NSIS_MUI_FINISHPAGE_RUN "$INSTDIR\\\\${INSTALL_BIN_DIR}\\\\parquetpad.exe")
+
+elseif(APPLE)
+    set(CPACK_GENERATOR "DragNDrop")
+    # For a professional look on macOS, you might want to create a background image for the DMG.
+    # set(CPACK_DMG_BACKGROUND_IMAGE "${CMAKE_SOURCE_DIR}/assets/dmg_background.png")
+    set(CPACK_DMG_WINDOW_POSITION "100 100")
+    set(CPACK_DMG_WINDOW_SIZE "500 320")
+    set(CPACK_DMG_ICON_SIZE "80")
+
+else() # Linux
+    set(CPACK_GENERATOR "TGZ")
+    set(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${PROJECT_NAME}")
+endif()
+
+include(CPack)
