fix resource file and cpack info

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,8 +132,8 @@ install(DIRECTORY assets/icons DESTINATION "${INSTALL_BIN_DIR}")
 set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A simple Parquet file viewer.")
-set(CPACK_PACKAGE_VENDOR "ParquetPad Contributors")
-set(CPACK_PACKAGE_CONTACT "noreply@example.com")
+set(CPACK_PACKAGE_VENDOR "ByteCat Digital (Pty) Ltd")
+set(CPACK_PACKAGE_CONTACT "johan@bytecat.co.za")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "${CPACK_PACKAGE_NAME}")
 
