--- a/src/parquetpad.rc
+++ b/src/parquetpad.rc
@@ -1,1 +1,1 @@
-IDI_ICON1               ICON                    "/home/johan/projects/parquetpad/assets/icons/cat_windows_icon.ico"
+IDI_ICON1               ICON                    "../assets/icons/cat_windows_icon.ico"
